# cross-species-scrna

./: .gitignore  CHEATSHEET.md  CLAUDE.md  INTERVIEW.md  README.md  SUMMARY.md  pyproject.toml  run_all.sh
notebooks/: 07_foundation_model_scGPT_colab.ipynb
results/: conserved_vs_specific.csv  contrastive_report.json  eval_report.json  poster.html
src/: 00_download.py  01_load_data.py  02_orthologs.py  03_vae_scratch.py  04_scvi.py  05_eval.py  06_contrastive.py  config.py  orthologs.py  prep.py
tests/: test_orthologs.py
