[project]
name = "cross-species-scrna"
version = "0.1.0"
description = "Cross-species (human/mouse) islet scRNA-seq integration over a 1:1 ortholog gene space, with a from-scratch VAE and scVI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "igraph>=1.0.0",
    "ipykernel>=7.3.0",
    "leidenalg>=0.12.0",
    "matplotlib>=3.11.0",
    "pybiomart>=0.2.0",
    "scanpy>=1.11.5",
    "scib-metrics>=0.5.9",
    "scvi-tools>=1.4.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# src/ holds the pipeline modules (imported flat, e.g. `import orthologs`)
pythonpath = ["src"]
